# PHYLLOTAXIS

./: LICENSE  Meta_phyllo_proto.ipynb  PHYLLOTAXIS_ANIMATION.ipynb  Phyllo_benchmarks_kdtree.ipynb  Phyllotaxis.ipynb  README.md  k_graph.py  pyproject.toml  sun_glitter_meta_phyllo_proto.ipynb
.devcontainer/: devcontainer.json
